# agent-config

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  apm.yml  justfile  third-party-skills.txt
agents/: code-reviewer.md  planner.md
commands/: commit.md  plan.md  review.md
rules/: coding-style.md  communication.md  debugging.md  delegation.md  git-workflow.md
skills/ci-fix/: SKILL.md
skills/ci-fix/agents/: openai.yaml
skills/conventional-commits/: SKILL.md
skills/conventional-commits/agents/: openai.yaml
skills/design-review/: SKILL.md
skills/design-review/agents/: openai.yaml
skills/ghq-create-repository/: SKILL.md
skills/ghq-create-repository/agents/: openai.yaml
skills/local-first-filesystem/: SKILL.md
skills/local-first-filesystem/agents/: openai.yaml
skills/local-first-filesystem/references/: failure-and-test-matrix.md
skills/release-engineering/: SKILL.md
skills/release-engineering/agents/: openai.yaml
skills/release-engineering/references/: macos-app-store.md  npm.md  rust.md
skills/rust-performance/: SKILL.md
skills/rust-performance/agents/: openai.yaml
skills/rust-review/: SKILL.md
skills/rust-review/agents/: openai.yaml
skills/swift-performance/: SKILL.md
skills/swift-performance/agents/: openai.yaml
skills/swift-performance/references/: measurement-recipes.md
skills/swift-review/: SKILL.md
skills/swift-review/agents/: openai.yaml
skills/ts-review/: SKILL.md
skills/ts-review/agents/: openai.yaml
src/: main.rs
